# ssc-rust

./: 2 a1 a2  Cargo.toml  README.md  index.html  test.sat
src/: base_rules.rs  comparators.rs  grammar.peg  grammar.pest  helpers.rs  interpreter.rs  lib.rs  main.rs  operators.rs  prefixes.rs
