[package]
name = "ssc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lrpeg = "0.4"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
unicode-xid = "0.2"
state = "0.5"
itertools = "0.9.0"
wasm-bindgen = "0.2"
